// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flood fill Sample input 1`] = `
Array [
  305,
  233,
]
`;

exports[`Flood fill Sample input 2`] = `
"⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╗ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ║ ▼ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
◆ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╝ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═╗ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ 1 ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
◆ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═════════════════════╗ ║ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ 0 ┃ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ◄━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
◆ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
62/600"
`;

exports[`Flood fill Sample input 2 1`] = `
Array [
  296,
  240,
]
`;

exports[`Flood fill Sample input 2 2`] = `
"⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ╔═╗ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ║ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ╔═╝ ▼ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╚═╗ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ 1 ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╚═════════════════════╗ ║ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ┃ ┏━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ 0 ┃ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
◄━━━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
64/600"
`;

exports[`Flood fill Sample input 3 1`] = `
Array [
  198,
  336,
]
`;

exports[`Flood fill Sample input 3 2`] = `
"⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╗ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╝ ╚═► ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═╗ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ 1 ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═════════════════════╗ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
▲ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ 0 ┃ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
┗━━━━━━━━━━━━━━━━━┛ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
66/600"
`;

exports[`Game Sample input 1`] = `
"┏━━━━━━━┓ ◄═══════════════════════════════════════════════╗
┃ ⋅ ⋅ ⋅ ┗━━━━━━━━━━━0 ⋅ ┏━━━━━━━━━━━► ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
┗━━━━━━━━━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
67/600"
`;

exports[`Game Start position when my index is 0 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
2/600"
`;

exports[`Game Start position when my index is 1 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ▲
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
3/600"
`;

exports[`Game Start position when my index is 2 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 2─► ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ▲
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
5/600"
`;

exports[`Iterator Single player 1`] = `
"0━━━━━┓
┏━━━┓ ┃
┃ ◄━┛ ┃
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 2`] = `
"0━━━━━┓
┏━┓ ▲ ┃
┃ ┗━┛ ┃
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 3`] = `
"0━━━━━┓
◄━━━┓ ┃
┏━━━┛ ┃
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 4`] = `
"0━━━━━┓
┏━━━┓ ┃
┃ ▲ ┃ ┃
┗━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 5`] = `
"0━━━━━┓
┏━━━┓ ┃
┗━┓ ┃ ┃
◄━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 6`] = `
"0━━━━━┓
▲ ┏━┓ ┃
┃ ┃ ┃ ┃
┗━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 7`] = `
"0━━━━━┓
┏━━━━━┛
┃ ◄━━━┓
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 8`] = `
"0━━━━━┓
┏━━━━━┛
┃ ┏━━━┓
┗━┛ ◄━┛
16/16"
`;

exports[`Iterator Single player 9`] = `
"0━━━━━┓
┏━━━━━┛
┃ ┏━┓ ▲
┗━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 10`] = `
"0━━━━━┓
┏━━━━━┛
┗━━━━━┓
◄━━━━━┛
16/16"
`;

exports[`Iterator Single player 11`] = `
"0 ┏━━━┓
┃ ┃ ▲ ┃
┃ ┗━┛ ┃
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 12`] = `
"0 ┏━━━┓
┃ ┗━┓ ┃
┃ ◄━┛ ┃
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 13`] = `
"0 ▲ ┏━┓
┃ ┃ ┃ ┃
┃ ┗━┛ ┃
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 14`] = `
"0 ┏━━━┓
┃ ┃ ◄━┛
┃ ┗━━━┓
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 15`] = `
"0 ┏━┓ ▲
┃ ┃ ┗━┛
┃ ┗━━━┓
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 16`] = `
"0 ◄━━━┓
┃ ┏━━━┛
┃ ┗━━━┓
┗━━━━━┛
16/16"
`;

exports[`Iterator Single player 17`] = `
"0 ┏━━━┓
┃ ┃ ▲ ┃
┃ ┃ ┃ ┃
┗━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 18`] = `
"0 ┏━━━┓
┃ ┃ ┏━┛
┃ ┃ ┃ ▲
┗━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 19`] = `
"0 ┏━━━┓
┃ ┃ ┏━┛
┃ ┃ ┗━┓
┗━┛ ◄━┛
16/16"
`;

exports[`Iterator Single player 20`] = `
"0 ┏━┓ ▲
┃ ┃ ┃ ┃
┃ ┃ ┃ ┃
┗━┛ ┗━┛
16/16"
`;

exports[`Iterator Single player 21`] = `
"0 ◆ ⋅ ◆
◆ ⋅ ◆ ⋅
⋅ ◆ ⋅ ◆
◆ ⋅ ◆ ⋅
1/16"
`;

exports[`Iterator Two players 1`] = `
"⋅ ⋅ ⋅ ⋅
╔═════►
║ ⋅ ⋅ ⋅
╚═════1
9/16"
`;

exports[`Iterator Two players 2`] = `
"⋅ ⋅ ▲ ⋅
╔═══╝ ⋅
║ ◇ ⋅ ⋅
╚═════1
9/16"
`;

exports[`Iterator Two players 3`] = `
"⋅ ◇ ⋅ ⋅
╔═══╗ ⋅
║ ⋅ ▼ ⋅
╚═════1
9/16"
`;

exports[`Iterator Two players 4`] = `
"⋅ ⋅ ⋅ ⋅
╔═╗ ⋅ ⋅
║ ╚═► ⋅
╚═════1
9/16"
`;

exports[`Iterator Two players 5`] = `
"▲ ⋅ ⋅ ⋅
╚═╗ ⋅ ⋅
╔═╝ ⋅ ◇
╚═════1
9/16"
`;

exports[`Iterator Two players 6`] = `
"0━━━━━┓
⋅ ◄━━━┛
⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅
7/16"
`;

exports[`Iterator Two players 7`] = `
"0━━━━━┓
⋅ ⋅ ┏━┛
⋅ ◄━┛ ⋅
⋅ ⋅ ⋅ ⋅
8/16"
`;

exports[`Iterator Two players 8`] = `
"⋅ ⋅ ⋅ ⋅
╔═╗ ⋅ ⋅
║ ╚═► ⋅
╚═════1
9/16"
`;

exports[`Iterator Two players 9`] = `
"⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ▲
╔═════╝
╚═════1
9/16"
`;

exports[`Iterator Two players 10`] = `
"▲ ⋅ ⋅ ⋅
╚═╗ ⋅ ⋅
╔═╝ ⋅ ◇
╚═════1
9/16"
`;

exports[`Iterator Two players 11`] = `
"⋅ ⋅ ⋅ ⋅
⋅ ◄═══╗
⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ 1
5/16"
`;

exports[`Iterator Two players 12`] = `
"⋅ ⋅ ▲ ⋅
⋅ ⋅ ╚═╗
⋅ ⋅ ⋅ ║
◇ ⋅ ◇ 1
5/16"
`;

exports[`Iterator Two players 13`] = `
"⋅ ⋅ ⋅ ◇
⋅ ⋅ ╔═╗
⋅ ⋅ ▼ ║
⋅ ⋅ ⋅ 1
5/16"
`;

exports[`Iterator Two players 14`] = `
"0━━━┓ ⋅
⋅ ⋅ ┃ ⋅
⋅ ⋅ ▼ ⋅
⋅ ⋅ ⋅ ⋅
5/16"
`;

exports[`Iterator Two players 15`] = `
"0━━━┓ ◆
⋅ ◄━┛ ⋅
⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅
5/16"
`;

exports[`Iterator Two players 16`] = `
"⋅ ⋅ ⋅ ⋅
⋅ ▲ ⋅ ⋅
⋅ ║ ⋅ ⋅
⋅ ╚═══1
5/16"
`;

exports[`Iterator Two players 17`] = `
"⋅ ⋅ ⋅ ◇
⋅ ⋅ ⋅ ⋅
◄═╗ ⋅ ◇
⋅ ╚═══1
5/16"
`;

exports[`Iterator Two players 18`] = `
"⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅
⋅ ╔═► ⋅
◇ ╚═══1
5/16"
`;

exports[`Iterator Two players 19`] = `
"0 ⋅ ⋅ ⋅
┃ ⋅ ⋅ ⋅
┗━━━► ⋅
⋅ ⋅ ⋅ ⋅
5/16"
`;

exports[`Iterator Two players 20`] = `
"0 ⋅ ⋅ ⋅
┃ ▲ ⋅ ⋅
┗━┛ ⋅ ⋅
◆ ⋅ ⋅ ⋅
5/16"
`;

exports[`Iterator Two players 21`] = `
"⋅ ╔═══╗
⋅ ║ ⋅ ║
⋅ ║ ⋅ ║
⋅ ▼ ⋅ 1
9/16"
`;

exports[`Iterator Two players 22`] = `
"⋅ ╔═══╗
⋅ ║ ◇ ║
◄═╝ ⋅ ║
⋅ ⋅ ⋅ 1
9/16"
`;

exports[`Iterator Two players 23`] = `
"⋅ ╔═══╗
◇ ║ ⋅ ║
⋅ ╚═► ║
⋅ ⋅ ⋅ 1
9/16"
`;

exports[`Iterator Two players 24`] = `
"⋅ ╔═══╗
⋅ ╚═╗ ║
⋅ ⋅ ▼ ║
⋅ ⋅ ⋅ 1
9/16"
`;

exports[`Iterator Two players 25`] = `
"◄═╗ ╔═╗
⋅ ╚═╝ ║
⋅ ⋅ ⋅ ║
⋅ ⋅ ◇ 1
9/16"
`;

exports[`Iterator Two players 26`] = `
"0 ⋅ ⋅ ⋅
┃ ▲ ⋅ ⋅
┃ ┃ ⋅ ⋅
┗━┛ ⋅ ⋅
7/16"
`;

exports[`Iterator Two players 27`] = `
"0 ⋅ ⋅ ⋅
┃ ⋅ ▲ ⋅
┃ ┏━┛ ⋅
┗━┛ ⋅ ⋅
8/16"
`;

exports[`Iterator Two players 28`] = `
"⋅ ╔═══╗
⋅ ╚═╗ ║
⋅ ⋅ ▼ ║
⋅ ⋅ ⋅ 1
9/16"
`;

exports[`Iterator Two players 29`] = `
"⋅ ⋅ ╔═╗
⋅ ⋅ ║ ║
⋅ ⋅ ║ ║
⋅ ◄═╝ 1
9/16"
`;

exports[`Iterator Two players 30`] = `
"◄═╗ ╔═╗
⋅ ╚═╝ ║
⋅ ⋅ ⋅ ║
⋅ ⋅ ◇ 1
9/16"
`;

exports[`Iterator Two players 31`] = `
"0 ⋅ ⋅ ⋅
⋅ ⋅ ◆ ⋅
⋅ ⋅ ⋅ ⋅
⋅ ⋅ ◇ 1
2/16"
`;
